# publiish-sdk

./: .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
actix-web-template/: .env  Cargo.toml  README.md
actix-web-template/src/: config.rs  errors.rs  main.rs  stream.rs  utils.rs
actix-web-template/src/middleware/: rate_limiter.rs
actix-web-template/src/models/: auth.rs  file_metadata.rs  mod.rs  requests.rs
actix-web-template/src/routes/: auth.rs  file.rs  mod.rs
actix-web-template/src/services/: ipfs_service.rs  mod.rs  rate_limiter.rs
client/: Dockerfile  package-lock.json  package.json  tailwind.config.js
cloudflare-gateway/: package-lock.json  package.json  wrangler.toml
cloudflare-gateway/src/: index.ts
cloudflare-ipns/: package-lock.json  package.json  readme.md  wrangler.toml
cloudflare-ipns/src/: index.ts  ipns-do.ts  types.ts
clusterapi/: .env  README.md  next.config.js  package-lock.json  package.json
clusterapi/pages/: middlewares.ts
first-node/: README.md
first-node/compose/: 001-ipfs-setup.sh  Dockerfile
nest-api/: .env  .env.example  Dockerfile  README.md  data-source.ts  package-lock.json  package.json  tsconfig.json
nest-api/client/: brands.html  main.js  signup.html  style.css
nest-api/migration/: 1681824058934-SubDomainColumn.ts
nest-api/migrations/: 1681130304250-InitMigration.ts  1712774109844-migrations.ts  (+1 more)
new-node/: README.md
nginx/: Dockerfile  ipfs_nginx.conf
publiish-api-helper/: package-lock.json  package.json  publiish-api-helper-1.0.0.tgz  readme.md  tsconfig.json
(+123 files in other folders)
