[package]
name = "actix-web-template"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = { version = "4.4", features = ["macros"] }
actix-rt = "2.10.0"
actix-multipart = "0.7.2"
actix-service = "2.0.3"
async-stream = "0.3.6"
sanitize-filename = "0.6.0"
uuid = { version = "1.16.0", features = ["v4"] }
mime_guess = "2.0.5"
ipfs-api = "0.17.0"
ipfs-api-prelude = "0.6.0"
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7.14", features = ["io"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
mysql = "24.0"
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9.3.1"
bcrypt = "0.17.0"
serde_with = "3.0"
hyper = { version = "0.14", features = ["client"] }
futures = "0.3"
futures-util = "0.3.31"
log = "0.4"         
env_logger = "0.10"
dotenv = "0.15"
mysql_async = "0.34"
thiserror = "1.0"
validator = { version = "0.20.0", features = ["derive"] }
